<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_row="3"
    android:layout_column="3"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:background="@drawable/portada"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:titleTextColor="@color/design_default_color_surface">

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/titulo"
            android:textColor="#000000"
            android:textSize="28sp"
            android:textStyle="bold"></TextView>


    </androidx.appcompat.widget.Toolbar>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnGMS"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:background="@drawable/degradao"
            android:text="@string/gradoMedioSuperior" />

        <Button
            android:id="@+id/btnFPB"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2sp"
            android:background="@drawable/degradao"
            android:text="@string/fpBasica" />

        <Button
            android:id="@+id/btnInnovacion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2sp"
            android:background="@drawable/degradao"
            android:text="@string/innovacionFP" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAcredita"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2sp"
            android:background="@drawable/degradao"
            android:text="@string/acreditacionDeCompe" />

        <Button
            android:id="@+id/btnNorma"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2sp"
            android:background="@drawable/degradao"
            android:text="@string/normaFP" />

        <Button
            android:id="@+id/btnPreguntas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2sp"
            android:background="@drawable/degradao"
            android:text="@string/preguntas" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/imagenLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/logo" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>